--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "serve": "vite preview",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
@@ -15,7 +15,6 @@
   },
   "homepage": "https://github.com/Dead-Reaven/Big-lapa",
   "dependencies": {
-    "gh-pages": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -32,6 +31,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "gh-pages": "^5.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.8.8",
     "typescript": "^4.5.5",
