--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "homepage": "https://github.com/Dead-Reaven/Big-lapa",
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
