--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src",
+    "baseUrl": "src"
   },
-    
+
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
