--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.11.2"
+    "react-router": "^6.12.0",
+    "react-router-dom": "^6.12.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
