--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "lint": "yarn lint:format && yarn lint:fix ",
     "type-check": "tsc",
+    "test": "jest --testPathIgnorePatterns=.*e2e.test.js",
     "//comment": "❌Don`t touch 'deploy'❌",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
   "homepage": "https://github.com/Dead-Reaven/Big-lapa",
   "dependencies": {
+    "@types/node": "^20.2.5",
+    "jest": "^29.5.0",
+    "puppeteer": "^20.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.0",
+    "ts-jest": "^29.1.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@types/jest": "^29.5.2",
+    "@types/react": "^17.0.60",
+    "@types/react-dom": "^17.0.20",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-react": "^1.3.2",
