--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "lint": "yarn lint:format && yarn lint:fix ",
     "type-check": "tsc",
-    "test": "jest --testPathIgnorePatterns=.*e2e.test.js",
+    "test": "jest -w",
     "//comment": "❌Don`t touch 'deploy'❌",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
