--- a/.github/workflows/React.yml
+++ b/.github/workflows/React.yml
@@ -26,6 +26,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm i
-      - run: npm run dev
-      - run: npm test
-      - run: npm run build
+      - run: npm run dev-and-test
