--- a/.github/workflows/React.yml
+++ b/.github/workflows/React.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Development CI/CD
+name: Master CI/CD
 
 on:
   push:
@@ -27,3 +27,4 @@ jobs:
           cache: 'npm'
       - run: npm i
       - run: npm run action-test
+      - run: npm run deploy
