--- a/.github/workflows/React.yml
+++ b/.github/workflows/React.yml
@@ -5,12 +5,13 @@ name: Development CI/CD
 
 on:
   push:
-    branches: ['master, development']
+    branches:
+      - 'development'
+
   pull_request:
-    types: 
-      - opened
-      - review_requested
-    branches: ['master, development']
+    branches:
+      - 'development'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,6 +28,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+      - name: test step
       - run: npm i
       - run: npm run action-test
-
