--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.0",
+    "styled-components": "^6.0.0-rc.3",
     "ts-jest": "^29.1.0",
     "yarn": "^1.22.19"
   },
