--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.12.0",
     "styled-components": "^6.0.0-rc.3",
     "ts-jest": "^29.1.0",
+    "vite-plugin-svgr": "^3.2.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
