--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Dead-Reaven/Big-lapa",
   "dependencies": {
     "@types/node": "^20.2.5",
+    "all": "^0.0.0",
     "jest": "^29.5.0",
     "puppeteer": "^20.5.0",
     "react": "^18.0.2",
