--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.0",
     "styled-components": "^6.0.0-rc.3",
+    "swiper": "^10.0.4",
     "ts-jest": "^29.1.0",
     "vite-plugin-svgr": "^3.2.0",
     "yarn": "^1.22.19"
