--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^18.0.2",
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.0",
-    "styled-components": "^6.0.0-rc.3",
+    "styled-components": "^6.0.5",
     "swiper": "^10.0.4",
     "ts-jest": "^29.1.0",
     "vite-plugin-svgr": "^3.2.0",
