--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/node": "^20.2.5",
     "all": "^0.0.0",
+    "axios": "^1.4.0",
     "jest": "^29.5.0",
     "puppeteer": "^20.5.0",
     "react": "^18.0.2",
