--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.0.2",
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.0",
+    "react-router-hash-link": "^2.4.3",
     "styled-components": "^6.0.5",
     "swiper": "^10.0.4",
     "ts-jest": "^29.1.0",
@@ -38,6 +39,7 @@
     "@types/jest": "^29.5.2",
     "@types/react": "^17.0.60",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-hash-link": "^2.4.6",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-react": "^1.3.2",
