--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Dead-Reaven/Big-lapa",
   "dependencies": {
+    "@tanstack/react-query": "^4.32.1",
     "@types/node": "^20.2.5",
     "all": "^0.0.0",
     "axios": "^1.4.0",
