--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "puppeteer": "^20.5.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
+    "react-native-gallery-swiper": "^1.26.4",
     "react-router": "^6.12.0",
     "react-router-dom": "^6.12.0",
     "react-router-hash-link": "^2.4.3",
